# TDT4230-Final-Project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile
shaders/: shader.frag  shader.vert  test.frag  test.vert
src/: camera.hpp  game.hpp  light.hpp  main.cpp  mesh.hpp  node.hpp  portal.hpp  shader.hpp  texture.hpp  window.hpp
